new proj/src/objects/GE_ES_Exception__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Account_Currency__c</fullName>
        <formula>if(ISNULL(TEXT(GE_ES_Opportunity_Name__r.Account.CurrencyIsoCode)),&apos;&apos;,TEXT(GE_ES_Opportunity_Name__r.Account.CurrencyIsoCode))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Statutory Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>GE_ES_Acc_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bid_Currency__c</fullName>
        <description>Gets the opportunity Currency</description>
        <formula>TEXT(GE_ES_Opportunity_Name__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bid Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Functional_Currency__c</fullName>
        <description>Gets the functional currency of the Statutory Department</description>
        <formula>if(ISNULL(GE_ES_Account_Name__r.GE_ES_Functional_Currency__c),&apos;&apos;,GE_ES_Account_Name__r.GE_ES_Functional_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Functional Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Bid_Currency_Mismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BC is neither FC nor AC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_Currency_Mismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BC not equal to FC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_SD_Not_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SD does not Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Exceptions</relationshipLabel>
        <relationshipName>GE_ES_Opp_Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Exception</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Exception Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>